Fixed top spacing

--- a/src/index.css
+++ b/src/index.css
@@ -69,8 +69,8 @@ body {
 }
 
 .profile {
-  width: 36px;
-  height: 36px;
+  width: 29px;
+  height: 29px;
   border-radius: 5px;
 
   background: #5436da;
